--- a/ProductAdministrationSystem/Content/sass/support/_modal.scss
+++ b/ProductAdministrationSystem/Content/sass/support/_modal.scss
@@ -53,7 +53,6 @@ $ease: transition all $s cubic-bezier(0.23, 1, 0.32, 1);
   background: transparent;
 }
 .modal__dialog {
-  max-width: 600px;
   padding: 1.2rem;
 }
 .modal__content {
